log/build_2024-06-25_13-45-42/py_srvcli/stderr.log
  File "/home/sldev/ros2_ws/install/py_srvcli/lib/python3.12/site-packages/py_srvcli/client_member_function.py", line 10
    super().__init__('minimal_client_async)
                     ^
SyntaxError: unterminated string literal (detected at line 10)

